Added toggle switch

--- a/index.html
+++ b/index.html
@@ -10,26 +10,19 @@
   <body>
     <div class="flex">
       <div>
-        <header>
-          <div class="container">
-
+        <header class="container">
             <a id="logo" href="index.html"><img src="assets/logo-dark.svg" alt="Silicon logotype"/></a>
 
             <nav id="main-menu" class="navbar">
               <a href="">Features</a>
             </nav>
 
-            <div id="darkmode-toggle-switch" class="btn-toggle-switch">
-              <span class="label">Dark mode</span>
-              <label for="darkmode-switch" class="toggle-switch">
-                <input type="checkbox" id="darkmode-switch">
-                <span class="slider round"></span>
-              </label>
+            <div id="toggle">
+              <span>Dark mode</span>
+              <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
             </div>
 
             <a id="signin" href="" class="btn-primary"><span>Sign in / up</span></a>
-            
-          </div>
         </header>
 
         <main>
