--- a/index.html
+++ b/index.html
@@ -8,159 +8,152 @@
     <title>Silicon</title>
   </head>
   <body>
-    <div class="flex">
-      <div>
-        <header class="container">
-            <a id="logo" href="index.html"><img src="assets/logo-dark.svg" alt="Silicon logotype"/></a>
+    <div class="wrapper">
+      <header class="container">
+          <a id="logo" href="index.html"><img src="assets/logo-dark.svg" alt="Silicon logotype"/></a>
+          <nav class="navbar">
+            <a href="">Features</a>
+          </nav>
+          <div id="toggle">
+            <span>Dark mode</span>
+            <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
+          </div>
+          <a href="" class="btn-primary"><span>Sign in / up</span></a>
+      </header>
+      <main>
+        <section>
+          <h1>Manage All Your Money in One App</h1>
+          <p class="subtitle">We offer you a new generation of the mobile banking. Save, spend & manage money in your pocket.</p>
+          <div>
+            <a href="">Download on the AppStore</a>
+            <a href="">Get it on Google Play</a>
+          </div>
+          <a href="">Discover more</a> <!-- Link or just regular text? -->
+        </section>
 
-            <nav id="main-menu" class="navbar">
-              <a href="">Features</a>
-            </nav>
+        <section>
+          <div>
+            <img src="assets/logoipsum-1.svg" alt="Logo of the client Logo" />
+            <img src="assets/logoipsum-2.svg" alt="Logo of the client Logoipsum" />
+            <img src="assets/logoipsum-3.svg" alt="Logo of the client Logoipsum" />
+            <img src="assets/logoipsum-4.svg" alt="Logo of the client Logoipsum" />
+            <img src="assets/logoipsum-5.svg" alt="Logo of the client Logoipsum" />
+            <img src="assets/logoipsum-6.svg" alt="Logo of the client Logoipsum" />
+          </div>
+          <h2>App Features</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
+          <div>
+            <h3>Easy Payments</h3>
+            <p>Id mollis consectetur congue egestas egestas suspendisse blandit justo.</p>
+          </div>
+          <div>
+            <h3>Cost Statistics</h3>
+            <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
+          </div>
+          <div>
+            <h3>Regular Cashback</h3>
+            <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.</p>
+          </div>
+          <div>
+            <h3>Data Security</h3>
+            <p>Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.</p>
+          </div>
+          <div>
+            <h3>Support 24/7</h3>
+            <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
+          </div>
+          <div>
+            <h3>Top Standards</h3>
+            <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor arcu.</p>
+          </div>
+        </section>
 
-            <div id="toggle">
-              <span>Dark mode</span>
-              <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
-            </div>
+        <section class="dark-bg">
+          <h2>How Does It Work?</h2>
+          <h3>Latest transaction history</h3>
+          <p>Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in consectetur condimentum.</p>
+        </section>
 
-            <a id="signin" href="" class="btn-primary"><span>Sign in / up</span></a>
-        </header>
+        <section>
+          <h2>Make your money transfer simple and clear</h2>
+          <ul>
+            <li>Banking transactions are free for you</li>
+            <li>No monthly cash commission</li>
+            <li>Manage payments and transactions online</li>
+          </ul>
+          <a href="">Learn more</a>
+        </section>
 
-        <main>
-          <section>
-            <h1>Manage All Your Money in One App</h1>
-            <p class="subtitle">We offer you a new generation of the mobile banking. Save, spend & manage money in your pocket.</p>
-            <div>
-              <a href="">Download on the AppStore</a>
-              <a href="">Get it on Google Play</a>
-            </div>
-            <a href="">Discover more</a> <!-- Link or just regular text? -->
-          </section>
+        <section>
+          <h2>Receive payment from international bank details</h2>
+          <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
+          <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
+          <a href="">Learn more</a>
+        </section>
 
-          <section>
+        <section class="dark-bg">
+          <h2>Clients are Loving Our App</h2>
+          <div>
             <div>
-              <img src="assets/logoipsum-1.svg" alt="Logo of the client Logo" />
-              <img src="assets/logoipsum-2.svg" alt="Logo of the client Logoipsum" />
-              <img src="assets/logoipsum-3.svg" alt="Logo of the client Logoipsum" />
-              <img src="assets/logoipsum-4.svg" alt="Logo of the client Logoipsum" />
-              <img src="assets/logoipsum-5.svg" alt="Logo of the client Logoipsum" />
-              <img src="assets/logoipsum-6.svg" alt="Logo of the client Logoipsum" />
-            </div>
-            <h2>App Features</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
-            <div>
-              <h3>Easy Payments</h3>
-              <p>Id mollis consectetur congue egestas egestas suspendisse blandit justo.</p>
+              <p>Sit pretium aliquam tempor, orci dolor sed maecenas rutrum sagittis. Laoreet posuere rhoncus, egestas lacus, egestas justo aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo turpis sit amet.</p>
+              <div>Fannie Summers</div>
+              <div>Designer</div>
             </div>
             <div>
-              <h3>Cost Statistics</h3>
-              <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
+              <p>Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl bibendum nulla tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt egestas eget nunc.</p>
+              <div>Albert Flores</div>
+              <div>Developer</div>
             </div>
-            <div>
-              <h3>Regular Cashback</h3>
-              <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.</p>
-            </div>
-            <div>
-              <h3>Data Security</h3>
-              <p>Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.</p>
-            </div>
-            <div>
-              <h3>Support 24/7</h3>
-              <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
-            </div>
-            <div>
-              <h3>Top Standards</h3>
-              <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor arcu.</p>
-            </div>
-          </section>
-
-          <section class="dark-bg">
-            <h2>How Does It Work?</h2>
-            <h3>Latest transaction history</h3>
-            <p>Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in consectetur condimentum.</p>
-          </section>
-
-          <section>
-            <h2>Make your money transfer simple and clear</h2>
-            <ul>
-              <li>Banking transactions are free for you</li>
-              <li>No monthly cash commission</li>
-              <li>Manage payments and transactions online</li>
-            </ul>
-            <a href="">Learn more</a>
-          </section>
-
-          <section>
-            <h2>Receive payment from international bank details</h2>
-            <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
-            <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
-            <a href="">Learn more</a>
-          </section>
-
-          <section class="dark-bg">
-            <h2>Clients are Loving Our App</h2>
-            <div>
-              <div>
-                <p>Sit pretium aliquam tempor, orci dolor sed maecenas rutrum sagittis. Laoreet posuere rhoncus, egestas lacus, egestas justo aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo turpis sit amet.</p>
-                <div>Fannie Summers</div>
-                <div>Designer</div>
-              </div>
-              <div>
-                <p>Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl bibendum nulla tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt egestas eget nunc.</p>
-                <div>Albert Flores</div>
-                <div>Developer</div>
-              </div>
-            </div>
-          </section>
-          
-          <section>
-            <h2>Any questions? Check out the FAQs</h2>
-            <p>Still have unanswered questions and need to get in touch?</p>
-            <p>
-              <span>Still have questions?</span>
-              <a href="">Contact us</a>
-            </p>
-            <p>
-              <span>Don't like phone calls?</span>
-              <a href="">Contact us</a>
-            </p>
-            <div>
-              <details>
-                <summary>Is any of my personal information stored in the App?</summary>
-                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet quae fugiat sint tenetur beatae quos, eligendi veritatis unde obcaecati, ratione deserunt modi iure porro nesciunt laudantium cumque quibusdam consequuntur.</div>
-              </details>
-              <details>
-                <summary>What formats can I download my transaction history in?</summary>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, sequi! Doloremque placeat nostrum totam, veniam maxime id odio expedita a sequi voluptate numquam ea, rerum maiores deserunt labore, possimus ex.</div>
-              </details>
-              <details>
-                <summary>Can I schedule future transfers?</summary>
-                <div>Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper. Viverra aliquam arcu, viverra et, cursus. Aliquet pretium cursus adipiscing gravida et consequat lobortis arcu velit. Nibh pharetra fermentum duis accumsan lectus non. Massa cursus molestie lorem scelerisque pellentesque. Nisi, enim, arcu purus gravida adipiscing euismod montes, duis egestas. Vehicula eu etiam quam tristique tincidunt suspendisse ut consequat.</div>
-              </details>
-              <details>
-                <summary>When can I use Banking App services?</summary>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur placeat cum accusamus magnam eligendi nesciunt tenetur quaerat exercitationem officiis explicabo. Quisquam dolorem omnis animi recusandae fugit, inventore consequuntur laboriosam temporibus.</div>
-              </details>
-              <details>
-                <summary>Can I create my own password that is easy for me to remember?</summary>
-                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur excepturi quod fuga libero, suscipit ab magni, molestias et, aliquid ratione dolor? Vitae ab assumenda exercitationem laborum iste officiis, ipsum nesciunt.</div>
-              </details>
-              <details>
-                <summary>What happens if I forget or lose my password?</summary>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem perspiciatis est quam deleniti impedit fuga fugit laborum doloremque ex deserunt officiis similique distinctio debitis excepturi sunt molestiae, unde repudiandae.</div>
-              </details>
-            </div>
-          </section>
-        </main>
-
-        <footer class="dark-bg">
-          <h2>Subscribe to our newsletter to stay informed about latest updates</h2>
-          <form>
-            <label for="fname">Your Email</label>
-            <input type="text" id="subscribe">
-            <input type="submit" value="Submit">
-          </form>
-        </footer>
-      </div>
+          </div>
+        </section>
+        
+        <section>
+          <h2>Any questions? Check out the FAQs</h2>
+          <p>Still have unanswered questions and need to get in touch?</p>
+          <p>
+            <span>Still have questions?</span>
+            <a href="">Contact us</a>
+          </p>
+          <p>
+            <span>Don't like phone calls?</span>
+            <a href="">Contact us</a>
+          </p>
+          <div>
+            <details>
+              <summary>Is any of my personal information stored in the App?</summary>
+              <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet quae fugiat sint tenetur beatae quos, eligendi veritatis unde obcaecati, ratione deserunt modi iure porro nesciunt laudantium cumque quibusdam consequuntur.</div>
+            </details>
+            <details>
+              <summary>What formats can I download my transaction history in?</summary>
+              <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, sequi! Doloremque placeat nostrum totam, veniam maxime id odio expedita a sequi voluptate numquam ea, rerum maiores deserunt labore, possimus ex.</div>
+            </details>
+            <details>
+              <summary>Can I schedule future transfers?</summary>
+              <div>Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper. Viverra aliquam arcu, viverra et, cursus. Aliquet pretium cursus adipiscing gravida et consequat lobortis arcu velit. Nibh pharetra fermentum duis accumsan lectus non. Massa cursus molestie lorem scelerisque pellentesque. Nisi, enim, arcu purus gravida adipiscing euismod montes, duis egestas. Vehicula eu etiam quam tristique tincidunt suspendisse ut consequat.</div>
+            </details>
+            <details>
+              <summary>When can I use Banking App services?</summary>
+              <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur placeat cum accusamus magnam eligendi nesciunt tenetur quaerat exercitationem officiis explicabo. Quisquam dolorem omnis animi recusandae fugit, inventore consequuntur laboriosam temporibus.</div>
+            </details>
+            <details>
+              <summary>Can I create my own password that is easy for me to remember?</summary>
+              <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur excepturi quod fuga libero, suscipit ab magni, molestias et, aliquid ratione dolor? Vitae ab assumenda exercitationem laborum iste officiis, ipsum nesciunt.</div>
+            </details>
+            <details>
+              <summary>What happens if I forget or lose my password?</summary>
+              <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem perspiciatis est quam deleniti impedit fuga fugit laborum doloremque ex deserunt officiis similique distinctio debitis excepturi sunt molestiae, unde repudiandae.</div>
+            </details>
+          </div>
+        </section>
+      </main>
+      <footer class="dark-bg">
+        <h2>Subscribe to our newsletter to stay informed about latest updates</h2>
+        <form>
+          <label for="fname">Your Email</label>
+          <input type="text" id="subscribe">
+          <input type="submit" value="Submit">
+        </form>
+      </footer>
     </div>
   </body>
 </html>
