--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span>Dark mode</span>
             <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
           </div>
-          <a href="" class="btn-primary"><span>Sign in / up</span></a>
+          <a href="" class="button button__signin"><span>Sign in / up</span></a>
       </header>
       <main>
         <section>
@@ -30,9 +30,8 @@
           </div>
           <a href="">Discover more</a> <!-- Link or just regular text? -->
         </section>
-
         <section>
-          <div>
+          <div class="container client__logo">
             <img src="assets/logoipsum-1.svg" alt="Logo of the client Logo" />
             <img src="assets/logoipsum-2.svg" alt="Logo of the client Logoipsum" />
             <img src="assets/logoipsum-3.svg" alt="Logo of the client Logoipsum" />
@@ -68,7 +67,7 @@
           </div>
         </section>
 
-        <section class="dark-bg">
+        <section class="bg__dark">
           <h2>How Does It Work?</h2>
           <h3>Latest transaction history</h3>
           <p>Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique quisque hac in consectetur condimentum.</p>
@@ -81,17 +80,17 @@
             <li>No monthly cash commission</li>
             <li>Manage payments and transactions online</li>
           </ul>
-          <a href="">Learn more</a>
+          <a href="" class="button button__learn-more">Learn more</a>
         </section>
 
         <section>
           <h2>Receive payment from international bank details</h2>
           <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
           <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
-          <a href="">Learn more</a>
+          <a href="" class="button button__learn-more">Learn more</a>
         </section>
 
-        <section class="dark-bg">
+        <section class="bg__dark">
           <h2>Clients are Loving Our App</h2>
           <div>
             <div>
@@ -146,7 +145,7 @@
           </div>
         </section>
       </main>
-      <footer class="dark-bg">
+      <footer class="bg__dark">
         <h2>Subscribe to our newsletter to stay informed about latest updates</h2>
         <form>
           <label for="fname">Your Email</label>
