Updated CSS and also replaced PX with REM

--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="container">
+
+      <header class="container height-xxs">
+
+        <div class="container">
           <a id="logo" href="index.html"><img src="assets/logo-dark.svg" alt="Silicon logotype"/></a>
           <nav class="navbar">
             <a href="">Features</a>
           </nav>
+        </div>
+
+        <div class="container">
           <div id="toggle">
             <span>Dark mode</span>
             <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
           </div>
           <a href="" class="button button__signin"><span>Sign in / up</span></a>
+        </div>
+
       </header>
+
       <main>
-        <section>
+        <section class="height-s">
           <h1>Manage All Your Money in One App</h1>
           <p class="subtitle">We offer you a new generation of the mobile banking. Save, spend & manage money in your pocket.</p>
           <div>
@@ -30,6 +39,7 @@
           </div>
           <a href="">Discover more</a> <!-- Link or just regular text? -->
         </section>
+
         <section>
           <div class="container client__logo">
             <img src="assets/logoipsum-1.svg" alt="Logo of the client Logo" />
@@ -145,6 +155,7 @@
           </div>
         </section>
       </main>
+
       <footer class="bg__dark">
         <h2>Subscribe to our newsletter to stay informed about latest updates</h2>
         <form>
@@ -153,6 +164,7 @@
           <input type="submit" value="Submit">
         </form>
       </footer>
+
     </div>
   </body>
 </html>
