Added styles to keynotes under App Features

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <h1>Manage All Your Money in One App</h1>
           <p class="subtitle">We offer you a new generation of the mobile banking. Save, spend & manage money in your pocket.</p>
           <div>
-            <a href="">Download on the AppStore</a>
-            <a href="">Get it on Google Play</a>
+            <a href="" class="app app__appstore">Download on the AppStore</a>
+            <a href="" class="app app__googleplay">Get it on Google Play</a>
           </div>
           <a href="">Discover more</a> <!-- Link or just regular text? -->
         </section>
@@ -51,27 +51,27 @@
           </div>
           <h2>App Features</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.</p>
-          <div>
+          <div class="features features__payments">
             <h3>Easy Payments</h3>
             <p>Id mollis consectetur congue egestas egestas suspendisse blandit justo.</p>
           </div>
-          <div>
+          <div class="features features__statistics">
             <h3>Cost Statistics</h3>
             <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
           </div>
-          <div>
+          <div class="features features__cashback">
             <h3>Regular Cashback</h3>
             <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.</p>
           </div>
-          <div>
+          <div class="features features__security">
             <h3>Data Security</h3>
             <p>Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.</p>
           </div>
-          <div>
+          <div class="features features__support">
             <h3>Support 24/7</h3>
             <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
           </div>
-          <div>
+          <div class="features features__standards">
             <h3>Top Standards</h3>
             <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor arcu.</p>
           </div>
