--- a/index.html
+++ b/index.html
@@ -84,20 +84,23 @@
         </section>
 
         <section>
-          <h2>Make your money transfer simple and clear</h2>
-          <ul>
-            <li>Banking transactions are free for you</li>
-            <li>No monthly cash commission</li>
-            <li>Manage payments and transactions online</li>
-          </ul>
-          <a href="" class="button button__learn-more">Learn more</a>
-        </section>
-
-        <section>
-          <h2>Receive payment from international bank details</h2>
-          <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
-          <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
-          <a href="" class="button button__learn-more">Learn more</a>
+          <div class="container__make_your_money">
+            <h2>Make your money transfer simple and clear</h2>
+            <ul>
+              <li>Banking transactions are free for you</li>
+              <li>No monthly cash commission</li>
+              <li>Manage payments and transactions online</li>
+            </ul>
+            <a href="" class="button button__learn-more">Learn more</a>
+          </div>
+          <div class="container__receive_payment">
+            <h2>Receive payment from international bank details</h2>
+            <div>
+              <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
+              <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
+            </div>
+            <a href="" class="button button__learn-more">Learn more</a>
+          </div>
         </section>
 
         <section class="bg__dark">
