Few CSS updated for Header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <div>
-        
+
         <header>
           <div id="header">
             <nav>
@@ -19,7 +19,7 @@
             </nav>
             <div class="wrapper__toggle_signin">
               <span id="toggle">
-                <span class="wrapper__darkmode">Dark mode</span>
+                <span class="wrapper__darkmode">Dark Mode</span>
                 <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
               </span>
               <a href="" class="button button__signin"><span>Sign in / up</span></a>
