Added styles to Section 05

--- a/index.html
+++ b/index.html
@@ -114,18 +114,24 @@
           </section>
 
           <section id="section-05" class="bg__dark">
-            <div>
+            <div id="s05">
               <h2>Clients are Loving Our App</h2>
               <div>
-                <div>
+                <div class="testimonials">
                   <p>Sit pretium aliquam tempor, orci dolor sed maecenas rutrum sagittis. Laoreet posuere rhoncus, egestas lacus, egestas justo aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo turpis sit amet.</p>
-                  <div>Fannie Summers</div>
-                  <div>Designer</div>
+                  <div id="client-1">
+                    <div class="name">Fannie Summers</div>
+                    <div class="occupation">Designer</div>
+                  </div>
                 </div>
-                <div>
+              </div>
+              <div>
+                <div class="testimonials">
                   <p>Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl bibendum nulla tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt egestas eget nunc.</p>
-                  <div>Albert Flores</div>
-                  <div>Developer</div>
+                  <div id="client-2">
+                    <div class="name">Albert Flores</div>
+                    <div class="occupation">Developer</div>
+                  </div>
                 </div>
               </div>
             </div>
