Added styles to Section 06

--- a/index.html
+++ b/index.html
@@ -139,17 +139,19 @@
           
           <section id="section-06">
             <div>
-              <h2>Any questions? Check out the FAQs</h2>
-              <p>Still have unanswered questions and need to get in touch?</p>
-              <p>
-                <span>Still have questions?</span>
-                <a href="">Contact us</a>
-              </p>
-              <p>
-                <span>Don't like phone calls?</span>
-                <a href="">Contact us</a>
-              </p>
               <div>
+                <h2>Any questions? Check out the FAQs</h2>
+                <p>Still have unanswered questions and need to get in touch?</p>
+                <p>
+                  <span>Still have questions?</span>
+                  <a href="">Contact us</a>
+                </p>
+                <p>
+                  <span>Don't like phone calls?</span>
+                  <a href="">Contact us</a>
+                </p>
+              </div>
+              <div id="faq">
                 <details>
                   <summary>Is any of my personal information stored in the App?</summary>
                   <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident eveniet quae fugiat sint tenetur beatae quos, eligendi veritatis unde obcaecati, ratione deserunt modi iure porro nesciunt laudantium cumque quibusdam consequuntur.</div>
