Completed styling for Section 06

--- a/index.html
+++ b/index.html
@@ -139,17 +139,19 @@
           
           <section id="section-06">
             <div>
-              <div>
-                <h2>Any questions? Check out the FAQs</h2>
+              <div class="s06">
+                <h2>Any questions? <br />Check out the FAQs</h2>
                 <p>Still have unanswered questions and need to get in touch?</p>
-                <p>
-                  <span>Still have questions?</span>
-                  <a href="">Contact us</a>
-                </p>
-                <p>
-                  <span>Don't like phone calls?</span>
-                  <a href="">Contact us</a>
-                </p>
+                <div class="contact-us">
+                  <div>
+                    <p id="call">Still have questions?</p>
+                    <a href="">Contact us</a>
+                  </div>
+                  <div>
+                    <p id="chat">Don't like phone calls?</p>
+                    <a href="">Contact us</a>
+                  </div>
+                </div>
               </div>
               <div id="faq">
                 <details>
