--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment" />
     <link rel="stylesheet" href="css/global.css">
-    <title>Silicon</title>
+    <title>Silicon | Manage All Your Money in One App</title>
   </head>
   <body>
     <div class="wrapper">
@@ -183,13 +183,14 @@
           </section>
         </main>
 
-        <footer class="bg__dark">
-          <h2>Subscribe to our newsletter to stay informed about latest updates</h2>
-          <form>
-            <label for="fname">Your Email</label>
-            <input type="text" id="subscribe">
-            <input type="submit" value="Submit">
-          </form>
+        <footer>
+          <div class="bg__dark">
+            <h2>Subscribe to our newsletter to stay informed about latest updates</h2>
+            <form>
+              <label for="subscribe">Your Email</label>
+              <input type="text" id="subscribe" placeholder="&nbsp; &nbsp; &nbsp; Your Email"><input type="submit" value="Subscribe" class="subscribe-button">
+            </form>
+          </div>
           <p>© 2024 Silicon. All rights reserved. Credit MadrasThemes</p>
         </footer>
       </div>
