--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header>
         <div id="header">
           <nav>
-            <a href="index.html"><img src="assets/logo-dark.svg" alt="Silicon logotype"/></a>
+            <a href="index.html" aria-label="Go to start page"><img src="assets/logo-dark.svg" alt="Silicon logotype"/></a>
             <a href="">Features</a>
           </nav>
           <div class="wrapper__toggle_signin">
